# rust-note-app

./: Cargo.toml  README.md
src/: lib.rs  main.rs
