[package]
name = "ios_notes_app"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.9", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[lib]
name = "ios_notes_app"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "ios_notes_app"
path = "src/main.rs"